chore(linux): Migrate Linux viewer UI to Tailwind
